# Ubuntu-mcp

./: .gitignore  README.md  install.sh  pyproject.toml
ubuntu_mcp/: __init__.py  server.py
