[project]
name = "ubuntu-mcp-server"
version = "0.1.0"
description = "MCP server for Ubuntu system control with GUI automation"
authors = [{name = "Jordi"}]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pyautogui>=0.9.54",
    "psutil>=5.9.0",
    "Pillow>=10.0.0",
    "python-xlib>=0.33; sys_platform == 'linux'",
]

[project.scripts]
ubuntu-mcp = "ubuntu_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
